syntax/tests/parsing/errors/expressions/implementation.res
module InstallerDownload = {
  @react.component
  let make = () => {
    <div />
  }
}
}
module LicenseList = {

}
